[package]
name = "sleep-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
anyhow = "1.0"
walkdir = "2.4"
rustfft = "6.1"
serde_bytes = "0.11.15"
hex = "0.4.3"
ndarray = "0.16.1"
log = "0.4"
env_logger = "0.10"
sci-rs = "0.4.1"
csv = "1.3.0"
polars = { version = "0.45.1", features = ["lazy", "dtype-datetime", "ipc_streaming"] }
arrow = { version = "54.0.0", features = ["ipc_compression"] }

[profile.release]
strip="debuginfo"
